# seperate_void_streaming

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/hooks/: hooks.json
.claude/scripts/: medi-claude-md-augment.sh  medi-claude-md-uninstall.sh  medi-scaffold-check.sh
.obsidian/: workspace.json
eval/embeddings/: __init__.py  ecapa_tdnn.py  protocol.py  pyannote_emb.py  titanet_l.py  wespeaker_emb.py
examples/: README.md  basic_chunk_stream.py  demo_v03.py  fastapi_ws_demo.py  persist_workflow.py
medi_docs/current/: README.md  _map.md
scripts/: auto_play_audio.py  bugfix_baseline.py  diag_final_recluster.py  diagnose_baseline.py  download_ami.py  eval_ablation.py  generate_rttm.py  measure_multi_session_der.py  measure_p31_single.py  realtime_ablation.py  render_index.py  render_realtime_report.py  render_report.py  rttm_viewer.py  run_grid_sweep.py  run_grid_sweep_v2.py  run_p31_all.py  sweep_sanity_check.py
server/: __init__.py
server/audio/: __init__.py  ringbuffer.py
server/stt/: __init__.py  adapter.py  elevenlabs.py  vad.py
speaker_engine/: __init__.py  _config.py  diart_adapter.py  engine.py  exceptions.py  types.py
speaker_engine/audio/: __init__.py  format.py  window.py
speaker_engine/eval/: __init__.py  der.py
speaker_engine/multi/: __init__.py  merge.py
speaker_engine/sources/: __init__.py  file.py  microphone.py  multichannel.py  websocket.py
speaker_engine/storage/: base.py  (+5 more)
templates/: ablation_report.html
web/: index.html  worklet-processor.js
(+200 files in other folders)
