[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speaker_engine"
version = "0.1.0"
description = "diart 기반 실시간 화자 분리 라이브러리"
requires-python = ">=3.10,<3.12"
dependencies = [
    "diart==0.9.2",
    "pyannote.audio==3.1.1",
    "torch==2.1.*",
    "torchaudio==2.1.*",
    "huggingface_hub<0.20",
    "numpy<2",
    "scipy",
    "hdbscan",
]

[project.optional-dependencies]
sqlite = ["sqlite-vec"]
pgvector = ["pgvector", "asyncpg"]
beamforming = ["pyroomacoustics"]
microphone = ["sounddevice"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyannote.metrics",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["speaker_engine*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: 실 diart 모델 / HF_TOKEN 필요 (spec-05 §2 integration 카테고리)",
    "live: 실 인프라 (pgvector DB / HF Hub) 필요 (spec-05 §2 live 카테고리)",
    "eval: DER 측정 (AMI dataset + 실 diart 모델, ~수분/run, HF_TOKEN 필요)",
]
